# catala

./: .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .ocamlformat  .tags  .tags1  .woodpecker.yaml  .woodpecker.yaml.rej  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  Makefile.debian  README.md  build.ninja  build_release.sh  call-balance-checker.py  catala-js.opam  catala-proof.opam  catala.html  catala.opam  catala.opam.locked  catala_legifrance.opam  catala_publiccode.yml  cb2.py  clerk.html  clerk.opam  date.catala_en  date.catala_fr  default.nix  dune  dune-project  errors.ml  flake.nix  (+19 more)
build_system/: Makefile  README.md  clerk.ml  clerk_cli.ml  clerk_cli.mli  clerk_config.ml  clerk_config.mli  clerk_coverage.ml  clerk_coverage.mli  clerk_driver.ml  clerk_driver.mli  clerk_poll.ml  clerk_poll.mli  clerk_report.ml  clerk_report.mli  clerk_rpc_server.ml  clerk_rules.ml  clerk_rules.mli  clerk_runtest.ml  clerk_runtest.mli  clerk_scan.ml  clerk_scan.mli  clerk_toml_encoding.ml  clerk_toml_encoding.mli  design.md  dune  manpages.sexp  ninja_utils.ml  ninja_utils.mli
build_system/backend/: backend.ml  backend.mli  c.ml  c.mli  common.ml  common.mli  dune  java.ml  java.mli  jsoo.ml  jsoo.mli  ocaml.ml  ocaml.mli  python.ml  python.mli
build_system/clerk_lib/: clerk_cli.ml  clerk_cli.mli  clerk_config.ml  clerk_config.mli  clerk_toml_encoding.ml  clerk_toml_encoding.mli  dune
build_system/clerk_utils/: diff.ml  diff.mli  dune  ninja.ml  ninja.mli  poll.ml  poll.mli  scan.ml  scan.mli  var.ml  var.mli
build_system/test/: dune  ninja_utils.ml
build_system/tests/: clerk_driver.ml  dune  test_clerk_driver.ml
compiler/: CHANGELOG.md  catala.ml  catala_web.js  catala_web.ml  catala_web_interpreter.ml  driver.ml  driver.mli  dune  index.mld  manpages.sexp  plugin.ml  plugin.mli  runtime.ml  runtime.mli  stdlib_embedded.ml  test_web_interpreter.js  tests.ml
compiler/catala_utils/: bindlib_ext.ml  bindlib_ext.mli  catala_utils.mld  cli.ml  cli.mli  coverage_tmp.ml  dune  errors.ml  errors.mli  file.ml  file.mli  get_version.ml  global.ml  global.mli  graphs.ml  hash.ml  hash.mli  map.ml  mark.ml  mark.mli  marked.ml  marked.mli  message.ml  message.mli  messages.ml  messages.mli  myown.ml  ocamlformat.ml  ocamlformat.mli  pos.ml  pos.mli  pos_map.ml  pos_map.mli  position_map.ml  string.ml  string.mli  suggestions.ml  suggestions.mli  uid.ml  uid.mli  (+1 more)
compiler/concolic/: concolic_optimizations.ml  concolic_optimizations.mli  concrete_with_inputs.ml  dune  interpreter.ml  interpreter.mli  interpreter.result.ml  path_constraint.ml  path_constraint.mli  symb_expr.ml  symb_expr.mli  z3_utils.ml  z3_utils.mli
compiler/dcalc/: ast.ml  ast.mli  autotest.ml  autotest.mli  binded_representation.ml  binded_representation.mli  dcalc.mld  dune  from_scopelang.ml  from_scopelang.mli  implementing defaults  interpreter.ml  interpreter.mli  invariant.ml  invariants.ml  invariants.mli  optimizations.ml  optimizations.mli  print.ml  print.mli  to_coq.ml  typing.ml  typing.mli  vc_z3encoding.ml  verificator.ml
compiler/desugared/: ast.ml  ast.mli  dependency.ml  dependency.mli  desugared.mld  desugared_to_scope.ml  desugared_to_scope.mli  disambiguate.ml  disambiguate.mli  dune  from_surface.ml  from_surface.mli  linting.ml  linting.mli  name_resolution.ml  name_resolution.ml.~99adfb47aa3dd862af5d3b9fcddc305f0190a81a~  name_resolution.mli  print.ml  print.mli
compiler/lcalc/: ast.ml  ast.mli  backends.ml  backends.mli  binding_jsoo.ml  binding_jsoo.mli  closure_conversion.ml  closure_conversion.mli  compile_with_exceptions.ml  compile_with_exceptions.mli  compile_without_exceptions.ml  compile_without_exceptions.mli  compile_without_exceptions2.ml  dune  expand_op.ml  expand_op.mli  from_dcalc.ml  from_dcalc.mli  from_jsoo_interface.ml  js_interface.ml  lcalc.mld  lift_positions.ml  lift_positions.mli  monomorphize.ml  monomorphize.mli  optimizations.ml  optimizations.mli  print.ml  print.mli  remove_empty_exceptions.ml  remove_empty_exceptions.mli  to_jsoo_interface.ml  to_jsoo_interface.mli  to_ocaml.ml  to_ocaml.mli  to_python.ml  typecheck.ml
compiler/literate/: dune  html.ml  html.mli  latex.ml  latex.mli  literate.mld  literate_common.ml  literate_common.mli  md.ml  md.mli  pygmentize.ml  pygmentize.mli
compiler/plugins/: README.md  api_web.ml  binding_jsoo.ml  concolic.ml  dune  explain.ml  json_schema.ml  jsoo.ml  jsoo_interface.ml  lazy_interp.ml  modules.ml  plugins.mld  proof.ml  python.ml  web.ml
compiler/scalc/: ast.ml  compile_from_lambda.ml  dune  from_lambda.ml  from_lcalc.ml  from_lcalc.mli  print.ml  print.mli  scalc.mld  to_c.ml  to_c.mli  to_java.ml  to_java.mli  to_lean4.ml  to_lean4.mli  to_python.ml  to_python.mli  to_r.ml  to_r.mli  to_solidity.ml  to_solidity.mli  utils.ml  utils.mli
compiler/scopelang/: ast.ml  ast.mli  dependency.ml  dependency.mli  dune  from_desugared.ml  from_desugared.mli  print.ml  print.mli  (+3 more)
doc/: .gitignore  RELEASE.md  catala-dev-dependencies.opam  catala.bib  enlish_token_list.md  for_lawyers.tex  formalisation.tex  formalization.tex  motivation.tex  questionnaire.tex  reading_guide.tex  release.md
foo/: .gitignore  dune
runtimes/: dune
stdlib/: README.md  catala_stdlib.catala_en  clerk.toml  clerk.toml.in  date_en.catala_en  date_fr.catala_fr  date_internal.c  date_internal.catala_en  date_internal.h  date_internal.java  date_internal.ml  date_internal.mli  date_internal.py  date_it.catala_it  date_ro.catala_ro  decimal_en.catala_en  decimal_fr.catala_fr  decimal_internal.catala_en  decimal_it.catala_it  decimal_ro.catala_ro  dune  duration_en.catala_en  duration_fr.catala_fr  duration_it.catala_it  integer_en.catala_en  integer_fr.catala_fr  integer_it.catala_it  integer_ro.catala_ro  list_en.catala_en  list_fr.catala_fr  list_internal.catala_en  list_it.catala_it  list_ro.catala_ro  money_en.catala_en  money_fr.catala_fr  money_internal.catala_en  money_it.catala_it  money_ro.catala_ro  monthyear_en.catala_en  monthyear_fr.catala_fr  (+21 more)
(+2580 files in other folders)
