opam-version: "2.0"
version: "1.1.0"
synopsis:
  "Catala proof backend plugin"
description: """
This package provides a plugin for Catala that provides a Z3 encoding
of programs and can prove some properties on them
"""
maintainer: "contact@catala-lang.org"
authors: [
  "Vincent Botbol"
  "Nicolas Chataing"
  "Alain Delaët-Tixeuil"
  "Louis Gesbert"
  "Aymeric Fromherz"
  "Denis Merigoux"
  "Raphaël Monat"
  "Romain Primet"
  "Emile Rolley"
]
license: "Apache-2.0"
tags: [ "catala" "javascript" ]
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "catala" {= _:version}
  "z3" {>= "4.8.11"}
]
build: [
  "dune" "build" "-p" name "-j" jobs "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
]
run-test: [
  "dune" "exec" "--" "clerk" "test" "tests-extra/proof/"
]
build-env: [ CATALA_VERSION = "%{version}%" ]
dev-repo: "git+https://github.com/CatalaLang/catala"
