opam-version: "2.0"
# Warning: this file must not be pushed as-is to the opam repository:
# it uses a custom 'cataladevmode' variable and not the new --with-dev-setup flag
# (for both reasons of compatibility with older opam, and support in the 'depexts' section)

version: "1.0.0~alpha"
synopsis:
  "Compiler and library for the literate programming language for tax code specification"
description:
  "Catala is a domain-specific language for deriving faithful-by-construction algorithms from legislative texts. See https://catala-lang.org for more information"
maintainer: "contact@catala-lang.org"
authors: [
  "Vincent Botbol"
  "Nicolas Chataing"
  "Alain Delaët-Tixeuil"
  "Louis Gesbert"
  "Aymeric Fromherz"
  "Denis Merigoux"
  "Raphaël Monat"
  "Romain Primet"
  "Emile Rolley"
]
license: "Apache-2.0"
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "ocolor" {>= "1.3.0"}
  "bindlib" {>= "6.0"}
  "cmdliner" {>= "1.1.0"}
  "cppo" {>= "1"}
  "dates_calc" {>= "0.0.7"}
  "dune" {>= "3.13"}
  "js_of_ocaml-ppx" {= "4.1.0"}
  "menhir" {>= "20200211"}
  "menhirLib" {>= "20200211"}
  "ocaml" {>= "4.14.0"}
  "ocamlfind" {!= "1.9.5"}
  "ocamlgraph" {>= "1.8.8"}
  "re" {>= "1.11"}
  "sedlex" {>= "3.2"}
  "uucp" {>= "10"}
  "ubase" {>= "0.05"}
  "zarith" {>= "1.12"}
  "zarith_stubs_js" {>= "v0.14.1"}
  "yojson" {>= "2.1.0" }
  "crunch" {>= "3.0.0"}
  "alcotest" {>= "1.5.0"}
  "ninja_utils" {= "0.9.0"}
  "odoc" {with-doc}
  "ocamlformat" {cataladevmode & = "0.26.0"}
  "obelisk" {cataladevmode}
  "conf-npm" {cataladevmode}
  "conf-python-3-dev" {cataladevmode}
  "conf-openjdk" {cataladevmode}
  "cpdf" {cataladevmode}
  "conf-pandoc" {cataladevmode}
  "z3" {catalaz3mode}
  "conf-ninja"
  "otoml" {>= "1.0"}
]
depopts: ["z3"]
conflicts: [
  "z3" {< "4.8.11"}
  "base" {>= "v0.16.0"}
]
build: [
  "dune"
  "build"
  "-p"
  name
  "-j"
  jobs
  "@install"
  "@runtest" {with-test}
  "@doc" {with-doc}
]
dev-repo: "git+https://github.com/CatalaLang/catala"
depexts: [
  ["groff"] { with-doc }
  ["python3-pip"] {cataladevmode & os-family = "debian"}
  ["py3-pip" "py3-pygments"] {cataladevmode & os-distribution = "alpine"}
  ["python-pygments"] {cataladevmode & os-family = "arch"}
]
