opam-version: "2.0"
version: "0.8.0"
synopsis: "Linter that queries the LégiFrance API to check for correctness and expiration of Catala programs"
maintainer: ["contact@catala-lang.org"]
authors: ["Denis Merigoux"]
license: "Apache-2.0"
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.11.0"}
  "lwt" {>= "5.6.1"}
  "re" {>= "1.9.0"}
  "cohttp-lwt-unix" {>= "5.0.0"}
  "cohttp" {>= "5.0.0"}
  "lwt_ssl" {>= "1.2.0"}
  "tls" {>= "0.15.3"}
  "catala" {= version}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/CatalaLang/catala.git"
