opam-version: "2.0"
version: "0.8.0"
synopsis:
  "Build system for Catala, a specification language for tax and social benefits computation rules"
description:
  "Clerk is a build system for Catala, a specification language for tax and social benefits computation rules, see https://catala-lang.org"
maintainer: ["contact@catala-lang.org"]
authors: ["Emile Rolley" "Denis Merigoux"]
license: "Apache-2.0"
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "dune" {>= "2.8"}
  "dune-build-info" {>= "2.8"}
  "ocaml" {>= "4.11.0"}
  "cmdliner" {>= "1.1.0"}
  "re" {>= "1.9.0"}
  "ocolor" {>= "1.3.0"}
  "alcotest" {with-test & >= "1.5.0"}
  "catala" {= version}
  "ninja_utils" {= version}
  "odoc" {with-doc}
  "conf-diffutils" {cataladevmode}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/CatalaLang/catala.git"
depexts: [
  ["ninja-build"] {os-family = "debian"}
  ["samurai"] {os-distribution = "alpine"}
]
