(dirs runtimes compiler french_law build_system examples)

(data_only_dirs tests syntax_highlighting)

(copy_files compiler/surface/grammar.html)

(rule
 (action
  (with-stdout-to
   catala.html
   (pipe-stdout
    (run catala --help=groff)
    (run groff -P -l -P -r -mandoc -Thtml)))))

(alias
 (name exec)
 (deps compiler/catala.exe build_system/clerk.exe))

(rule
 (alias runtest)
 (package catala)
 (deps
  (source_tree tests))
 (action
  (run clerk --exe %{bin:catala} test tests)))

(rule
 (alias runtest)
 (package catala)
 (deps
  (source_tree examples))
 (action
  (run clerk --exe %{bin:catala} test examples)))
