(lang dune 3.13)

(name catala)

(generate_opam_files false)

(formatting)

(subst disabled)

(source
 (uri git+https://github.com/CatalaLang/catala.git))

(homepage https://github.com/CatalaLang/catala)

(bug_reports https://github.com/CatalaLang/catala/issues)

(authors
 "Denis Merigoux"
 "Nicolas Chataing"
 "Emile Rolley"
 "Louis Gesbert"
 "Aymeric Fromherz"
 "Alain Dela\195\171t-Tixeuil"
 "Raphaël Monat")

(maintainers "contact@catala-lang.org")

(license Apache-2.0)

(using menhir 3.0)
(using directory-targets 0.1)
