(library
 (name ninja_utils)
 (public_name ninja_utils)
 (modules ninja_utils)
 (libraries re))

(library
 (name clerk_driver)
 (public_name clerk.driver)
 (libraries
  catala.runtime_ocaml
  catala.catala_utils
  ninja_utils
  cmdliner
  re
  ocolor)
 (modules clerk_runtest clerk_driver))

(rule
 (target custom_linking.sexp)
 (mode fallback)
 (action
  (with-stdout-to
   %{target}
   (echo "()"))))

(executable
 (name clerk)
 (public_name clerk)
 (flags
  (:standard
   (:include custom_linking.sexp)))
 (libraries clerk.driver)
 (modules clerk)
 (package clerk))
