(library
 (name clerk_config)
 (public_name catala.clerk_config)
 (libraries catala.catala_utils otoml)
 (modules clerk_config clerk_toml_encoding))

(library
 (name clerk_driver)
 (public_name catala.clerk_driver)
 (libraries
  catala.runtime_ocaml
  catala.catala_utils
  catala.surface
  catala.clerk_config
  ninja_utils
  cmdliner
  re
  ocolor
  otoml)
 (modules clerk_scan clerk_report clerk_runtest clerk_driver))

(rule
 (target custom_linking.sexp)
 (mode fallback)
 (action
  (with-stdout-to
   %{target}
   (echo "()"))))

(executable
 (name clerk)
 (public_name clerk)
 (flags
  (:standard
   (:include custom_linking.sexp)))
 (libraries clerk_driver)
 (link_deps ../compiler/catala.exe)
 ; not a real dependency, but when running clerk in practice you always want the catala binary to be up-to-date (e.g. `dune exec -- ckerk test`)
 (modules clerk)
 (package catala))
