(library
 (name clerk_lib)
 (public_name catala.clerk_lib)
 (libraries catala.catala_utils catala.surface otoml)
 (modules clerk_config clerk_scan clerk_toml_encoding))

(library
 (name clerk_driver)
 (public_name catala.clerk_driver)
 (libraries
  ;;  runtime_ocaml
  catala.catala_utils
  catala.surface
  catala.clerk_lib
  ninja_utils
  cmdliner
  re
  ocolor
  otoml)
 (modules
  clerk_report
  clerk_runtest
  clerk_cli
  clerk_poll
  clerk_rules
  clerk_driver)
 (flags
  (:standard -open Clerk_lib)))

(rule
 (target custom_linking.sexp)
 (mode fallback)
 (action
  (with-stdout-to
   %{target}
   (echo "()"))))

(executable
 (name clerk)
 (public_name clerk)
 (flags
  (:standard
   (:include custom_linking.sexp)))
 ; These are actually runtime deps and not link deps
 (link_deps %{bin:catala} ../runtimes/ocaml/catala_runtime.cmi)
 (libraries clerk_driver)
 (modules clerk)
 (package catala))

(alias
 (name clerk)
 (deps %{bin:clerk} %{bin:catala}))
