opam-version: "2.0"
version: "0.8.0"
synopsis: "Virtual package listing the requirements for a complete Catala dev environment"
maintainer: ["contact@catala-lang.org"]
authors: [
  "Denis Merigoux"
  "Nicolas Chataing"
  "Emile Rolley"
  "Louis Gesbert"
  "Aymeric Fromherz"
  "Alain Delaët-Tixeuil"
]
license: "Apache-2.0"
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "ocamlformat" {= "0.21.0"}
  "obelisk"
  "conf-npm"
]
