(documentation
 (package catala))

(dirs jsoo ocaml python java r rescript c)

; Installation is done as source under catala lib directory
; For dev version this makes it easy to install the proper runtime with just
; `pip install dir` and be sure to get the right version

(install
 (files
  (ocaml/.runtime.objs/byte/catala_runtime.cmi as runtime/ocaml/catala_runtime.cmi)
  (ocaml/runtime.cma as runtime/ocaml/runtime.cma)
  (ocaml/runtime.cmxa as runtime/ocaml/runtime.cmxa)
  (ocaml/runtime.a as runtime/ocaml/runtime.a))
 (section lib))

(install
 (files
  (jsoo/.runtime_jsoo.objs/byte/runtime_jsoo.cmi
   as
   runtime/jsoo/runtime_jsoo.cmi)
  (jsoo/.runtime_jsoo.objs/jsoo/default/runtime_jsoo.cma.js
   as
   runtime/jsoo/runtime_jsoo.cma.js)
  (jsoo/runtime_jsoo.cma as runtime/jsoo/runtime_jsoo.cma))
 (section lib))

; Python runtime

(install
 (source_trees
  (python as runtime/python))
 (section lib))

(alias
 (name runtime-python)
 (deps
  %{workspace_root}/_build/install/%{context_name}/lib/catala/runtime/python/src/catala/runtime.py))

(install
 (files
  (java/catala_runtime.jar as runtime/java/catala_runtime.jar))
 (section lib))

(alias
 (name runtime-java)
 (deps
  %{workspace_root}/_build/install/%{context_name}/lib/catala/runtime/java/catala_runtime.jar))

;; ; Rescript runtime -- disabled
;;
;; (install
;;  (files
;;   (glob_files_rec
;;    (rescript/** with_prefix runtime/rescript)))
;;  (section lib))

(install
 (files
  (c/libcatala_runtime.a as runtime/c/libcatala_runtime.a)
  (c/dates_calc.h as runtime/c/dates_calc.h)
  (c/catala_runtime.h as runtime/c/catala_runtime.h))
 (section lib))

(alias
 (name runtime-c)
 (deps
  %{workspace_root}/_build/install/%{context_name}/lib/catala/runtime/c/libcatala_runtime.a
  %{workspace_root}/_build/install/%{context_name}/lib/catala/runtime/c/dates_calc.h
  %{workspace_root}/_build/install/%{context_name}/lib/catala/runtime/c/catala_runtime.h))

(alias
 (name runtimes)
 (deps
  ocaml/runtime.cmxa
  jsoo/.runtime_jsoo.objs/jsoo/default/runtime_jsoo.cma.js
  (alias runtime-python)
  (alias runtime-java)
  (alias runtime-c)))
