(rule
 (target clerk.toml)
 (action
  (with-stdout-to
   %{target}
   (progn
    (cat clerk.toml.in)
    (echo
     "RUNTIME_OCAML_LIBS = [\"%{lib:zarith:zarith.cmxa}\", \"%{lib:dates_calc:dates_calc.cmxa}\", \"%{lib-private:runtime:runtime.cmxa}\"]\n")
    ; Yes, we use sed. dune is really NOT helping here.
    (pipe-stdout
     (echo
      "OCAML_INCLUDE = [\"-I\", \"%{libexec:zarith:zarith.cmxa}\", \"-I\", \"%{libexec:dates_calc:dates_calc.cmxa}\", \"-I\", \"%{lib-private:runtime:runtime.cmxa}/.runtime.objs/byte\"]\n")
     (run sed "s%/[^/]*\\.cmxa%%g"))))))

(rule
 (deps (:src stdlib_en.catala_en)
       clerk.toml
       (source_tree .))
 (alias stdlib)
 (targets
  (dir lib))
 (action
  (run
   %{dep:../build_system/clerk.exe}
   build catala_stdlib.cmxa catala_stdlib.class
   --exe=%{dep:../compiler/catala.exe}
   -c--stdlib
   --build-dir=lib)))

(install
 (files
  (glob_files (*.catala_* with_prefix runtime))
  (glob_files_rec
   (lib/ocaml/* with_prefix runtime/ocaml)))
 (section lib))
