(library
 (name python)
 (public_name catala.plugins.python)
 (synopsis
  "Demonstration Catala plugin that reproduces the behaviour of the built-in python backend")
 (modules python)
 (libraries catala.driver))

(library
 (name api_web)
 (public_name catala.plugins.api_web)
 (synopsis "Catala plugin for interaction with a web interface")
 (modules api_web)
 (libraries catala.driver))

(library
 (name json_schema)
 (public_name catala.plugins.json_schema)
 (synopsis "Catala plugin generating JSON schemas useful to build web-forms")
 (modules json_schema)
 (libraries catala.driver))

(library
 (name lazy_interpreter)
 (public_name catala.plugins.lazy-interpreter)
 (synopsis
  "Catala plugin that implements a different, experimental interpreter, featuring lazy and partial evaluation")
 (modules lazy_interp)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(library
 (name explain)
 (public_name catala.plugins.explain)
 (synopsis
  "Experiments for the explanation of computations: generates a graph of the formulas that are used for a given execution of a scope")
 (modules explain)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(documentation
 (package catala)
 (mld_files plugins))
