(alias
 (name plugins)
 (deps
  (glob_files *.cmxs)))

(documentation
 (package catala)
 (mld_files plugins))

;; Base plugins

(library
 (name python)
 (synopsis
  "Demonstration Catala plugin that reproduces the behaviour of the built-in python backend")
 (modules python)
 (libraries catala.driver))

(library
 (name lazy_interpreter)
 (synopsis
  "Catala plugin that implements a different, experimental interpreter, featuring lazy and partial evaluation")
 (modules lazy_interp)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(library
 (name explain)
 (synopsis
  "Experiments for the explanation of computations: generates a graph of the formulas that are used for a given execution of a scope")
 (modules explain)
 (flags (-linkall))
 (libraries shared_ast catala.driver ocamlgraph))

(install
 (files python.cmxs lazy_interpreter.cmxs explain.cmxs)
 (package catala)
 (section
  (site
   (catala plugins))))

;; JS plugins

(library
 (name api_web)
 (synopsis "Catala plugin for interaction with a web interface")
 (modules api_web)
 (libraries catala.driver))

(library
 (name json_schema)
 (synopsis "Catala plugin generating JSON schemas useful to build web-forms")
 (modules json_schema)
 (libraries catala.driver))

(install
 (files api_web.cmxs json_schema.cmxs)
 (package catala-js)
 (section
  (site
   (catala plugins))))
