(library
 (name verification)
 (public_name catala.verification)
 (libraries
  str
  bindlib
  catala_utils
  dcalc
  catala.runtime_ocaml
  dates_calc
  (select
   z3backend.ml
   from
   (z3 -> z3backend.real.ml)
   (-> z3backend.dummy.ml))
  (select
   mopsabackend.ml
   from
   (-> mopsabackend.real.ml))))

(documentation
 (package catala)
 (mld_files verification))
