(executable
 (name proof)
; (public_name catala.plugins.proof)
 (modes plugin)
 ;; (synopsis
 ;;  "Program verification plugin 'proof' for Catala, based on Z3.")
 ;(enabled_if %{lib-available:z3}) ;
 (optional)
 ;; (flags (-linkall)) ; check if needed
; (ocamlopt_flags (:standard  %{lib:z3:z3ml.cmxa} -cclib -lz3 -cclib %{lib:z3:libz3ml.a}))
 (libraries
  bindlib
  catala_utils
  dcalc
  catala.runtime_ocaml
  dates_calc
  z3
  catala.driver))

(documentation
 (package catala)
 (mld_files verification))
